# simple_shell

./: ._exit.c.swp  ._shell_processor.c.swn  ._shell_processor.c.swo  .display_prompt.c.swp  .environment_manipulation.c.swp  .init_alias.c.swn  .init_alias.c.swo  .shell.c.swp  AUTHORS  _exit.c  _fprintf.c  _getenv.c  _setenv.c  _shell_processor.c  _split_word.c  _string.c  a.out  change_directory.c  comment.c  display_prompt.c  env_var.c  environment_manipulation.c  execute_command.c  fileio.c  free.c  getline_function.c  handle_env.c  handle_path.c  hanle_and_or.c  hsh  init_alias.c  init_env.c  main.h  menu.c  my_string_libary.c  print_env.c  search_expansion.c  sequencing.c  shell.c  test  (+1 more)
Programming_Document/JavaScript/FarmEase/: App.js  RegistrationScreen.js  SubscriptionScreen.js  package-lock.json  package.json
Programming_Document/JavaScript/FarmEase/styles/: RegistrationStyles.js  SubscriptionStyles.js
Programming_Document/Personal_Projects/BFTWorship/BFTWorship/: CMakeLists.txt  mainwindow.ui
Programming_Document/Personal_Projects/python_database/: Bible.py  Songs.py  adding_to_the_song.py  all_libraries.txt  creates_database.sql  kjv.py
Programming_Document/all_alx_task/alx-low_level_programming/: README.md
Programming_Document/all_alx_task/alx-low_level_programming/0x00-hello_world/: README.md  q  quote  size32
Programming_Document/all_alx_task/alx-low_level_programming/0x01-variables_if_else_while/: 0-positive_or_negative  1-last_digit  100-print_comb3  100-print_comb3.c  101-print_comb4  101-print_comb4.c  102-print_comb5.c  2-print_alphabet.c  3-print_alphabets  4-print_alphabt  4-print_alphabt.c  5-print_numbers.c  README.md  \  a.out  test.c
Programming_Document/all_alx_task/alx-low_level_programming/0x02-functions_nested_loops/: 1-alphabet  1-alphabet.c  1-main.c  10-add.c  100-times_table  100-times_table.c  101-natural  101-natural.c  11-print_to_98  11-print_to_98.c  2-print_alphabet_x10  2-print_alphabet_x10.c  3-islower  4-isalpha  5-sign.c  6-abs  7-print_last_digit  7-print_last_digit.c  8-24_hours  8-24_hours.c  9-times_table  9-times_table.c
Programming_Document/all_alx_task/alx-low_level_programming/0x03-debugging/: 0-main.c  2-largest_number  3-main_a.c  3-print_remaining_days.c  README.md  main.h
Programming_Document/all_alx_task/alx-low_level_programming/0x04-more_functions_nested_loops/: 0-isupper  1-isdigit  1-isdigit.c  10-print_triangle  10-print_triangle.c  100-prime_factor.c  101-print_number.c  101-print_numbers  2-mul  2-mul.c  3-print_numbers.c  4-print_most_numbers  4-print_most_numbers.c  5-more_numbers  5-more_numbers.c  6-print_line  6-print_line.c  7-print_diagonal  7-print_diagonal.c  8-print_square  9-fizz_buzz  (+4 more)
Programming_Document/all_alx_task/simple_shell/: README.md  _shell_processor.c  _split_word.c  display_prompt.c  env_vars.c  free.c  getline_function.c  hsh  main.h  my_string_lib.c  print_env.c  shell.c
(+187 files in other folders)
